Revision history for App-csv2sqlite

{{$NEXT}}

0.003     2012-12-27T00:34:15Z

  - Fix bug in tests causing failures on MSWin32.

0.002     2012-12-22T18:25:19Z

  - Add --csv-opt (-o) and --loader-opt (-l) to accept key=value pairs
    of options to pass to Text::CSV and DBIx::TableLoader::CSV.

  - Bump required version of DBIx::TableLoader::CSV to 1.101
    to get bugfix in superclass (DBIx::TableLoader 1.100).

  - More tests

0.001     2012-11-25T02:35:08Z

  - Initial release